ingatlan/ingatlan-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingatlan-api
  namespace: ingatlan
  labels:
    app: ingatlan-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingatlan-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ingatlan-api
    spec:
      containers:
        - name: ingatlan-api
          image: marcsello/ingatlan-api:3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
