ingatlan/ingatlan-telegram-bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingatlan-telegram-bot
  namespace: ingatlan
  labels:
    app: ingatlan-telegram-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingatlan-telegram-bot
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ingatlan-telegram-bot
    spec:
      containers:
        - name: ingatlan-telegram-bot
          image: marcsello/ingatlan-telegram-bot:1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
