ingatlan/ingatlan-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingatlan-api-svc
  namespace: ingatlan
  labels:
    app: ingatlan-api
spec:
  ports:
    - name: ingatlan-api
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: ingatlan-api
  type: ClusterIP
