ingatlan/ingatlan-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingatlan-redis-svc
  namespace: ingatlan
  labels:
    app: ingatlan-redis
spec:
  selector:
    app: ingatlan-redis
  ports:
    - name: ingatlan-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
