ingatlan/ingatlan-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingatlan-api-ingress
  namespace: ingatlan
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    cert-manager.io/revision-history-limit: "2"
spec:
  tls:
    - hosts:
        - ingatlan.k8s.marcsello.com
      secretName: letsencrypt
  rules:
    - host: ingatlan.k8s.marcsello.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingatlan-api-svc
                port:
                  number: 80
